--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,32 +1,48 @@
-#########################################################
-######### CMAKE BASIC CONFIGURATIONS ####################
-#########################################################
+# ########################################################
+# ######## CMAKE BASIC CONFIGURATIONS ####################
+# ########################################################
 # Set minimum required version
 cmake_minimum_required(VERSION 3.10)
+
 # Set the c standard
 set(CMAKE_C_STANDARD 90)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 message(STATUS C_STANDARD: ${CMAKE_C_STANDARD})
+
 # Set the c compiler
 set(CMAKE_C_COMPILER "gcc")
+
 # Set the c++ compiler
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 message(STATUS CXX_STANDARD: ${CMAKE_CXX_STANDARD})
+
 # Set the c++ compiler
-#set(CMAKE_CXX_COMPILER "gcc++")
-#########################################################
-######### CMAKE PROJECT CONFIGURATIONS ##################
-#########################################################
+# set(CMAKE_CXX_COMPILER "gcc++")
+
+# Set debugging configs
 set(CMAKE_BUILD_TYPE Debug)
+
+if(CMAKE_COMPILER_IS_GNUCC)
+  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
+  set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
+endif(CMAKE_COMPILER_IS_GNUCC)
+
+# ########################################################
+# ######## CMAKE PROJECT CONFIGURATIONS ##################
+# ########################################################
 # Set project name
 project(linked_C VERSION 0.0)
-# Set the source files 
+
+# Set the source files
 file(GLOB_RECURSE src_files src/*.c)
 message(STATUS source files: ${src_files})
+
 #
 add_executable(${PROJECT_NAME} main.c ${src_files})
+
 #
-target_include_directories(${PROJECT_NAME} PUBLIC 
-                           ${CMAKE_CURRENT_SOURCE_DIR}/inc)
+target_include_directories(${PROJECT_NAME} PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/inc)
+
 #
